--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1166,10 +1166,10 @@
 "Pointer" = "Pointer";
 
 /* No comment provided by engineer. */
-"pos_y" = "pos_y";
+"position_x" = "position_x";
 
 /* No comment provided by engineer. */
-"position_x" = "position_x";
+"position_y" = "position_y";
 
 /* No comment provided by engineer. */
 "Previous background" = "Previous background";
