IOS-596 Fix loading screen

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -557,6 +557,9 @@
 "Failed to import item" = "Failed to import item";
 
 /* No comment provided by engineer. */
+"Failed to load featured programs" = "Failed to load featured programs";
+
+/* No comment provided by engineer. */
 "Failed to load sound" = "Failed to load sound";
 
 /* No comment provided by engineer. */
@@ -1509,6 +1512,9 @@
 
 /* No comment provided by engineer. */
 "The description contains invalid characters, try again." = "The description contains invalid characters, try again.";
+
+/* No comment provided by engineer. */
+"The featured programs cannot be loaded" = "The featured programs cannot be loaded";
 
 /* No comment provided by engineer. */
 "The following item could not be imported from the Media Library:" = "The following item could not be imported from the Media Library:";
