IOS-566 Change protocol for FunctionManager

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1616,6 +1616,9 @@
 "Undo Typing?" = "Undo Typing?";
 
 /* No comment provided by engineer. */
+"Unknown Element" = "Unknown Element";
+
+/* No comment provided by engineer. */
 "Unselect All" = "Unselect All";
 
 /* No comment provided by engineer. */
