IOS-566 Add formula service and fix tests

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -398,6 +398,9 @@
 "Device disconnected." = "Device disconnected.";
 
 /* No comment provided by engineer. */
+"device motion-sensor" = "device motion-sensor";
+
+/* No comment provided by engineer. */
 "direction" = "direction";
 
 /* No comment provided by engineer. */
