IOS-507 When screen touched brick is now working

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1706,6 +1706,9 @@
 "When program started" = "When program started";
 
 /* No comment provided by engineer. */
+"When screen is touched" = "When screen is touched";
+
+/* No comment provided by engineer. */
 "When tapped" = "When tapped";
 
 /* No comment provided by engineer. */
