--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1058,6 +1058,9 @@
 "Only special characters are not allowed. Please enter at least %lu other character(s)." = "Only special characters are not allowed. Please enter at least %lu other character(s).";
 
 /* No comment provided by engineer. */
+"Open" = "Open";
+
+/* No comment provided by engineer. */
 "or" = "or";
 
 /* No comment provided by engineer. */
@@ -1095,9 +1098,6 @@
 
 /* No comment provided by engineer. */
 "Place at " = "Place at ";
-
-/* No comment provided by engineer. */
-"Play" = "Play";
 
 /* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
