IOS-626 reload program overview + overwrite program preview thumbnail

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1373,6 +1373,9 @@
 "Set Arduino PWM~ pin" = "Set Arduino PWM~ pin";
 
 /* No comment provided by engineer. */
+"Set as Preview Image" = "Set as Preview Image";
+
+/* No comment provided by engineer. */
 "Set background" = "Set background";
 
 /* No comment provided by engineer. */
