IOS-539 compute empty input formula editor

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -482,6 +482,9 @@
 "Email" = "Email";
 
 /* No comment provided by engineer. */
+"Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
 "End If" = "End If";
 
 /* No comment provided by engineer. */
