Add initial code for Wait Until Brick

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1688,6 +1688,9 @@
 "Wait" = "Wait";
 
 /* No comment provided by engineer. */
+"Wait until" = "Wait until";
+
+/* No comment provided by engineer. */
 "We" = "We";
 
 /* No comment provided by engineer. */
