IOS-652 Add localizable strings

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1610,6 +1610,12 @@
 "Unselect All" = "Unselect All";
 
 /* No comment provided by engineer. */
+"Unsupported Brick:" = "Unsupported Brick:";
+
+/* No comment provided by engineer. */
+"Unsupported Script:" = "Unsupported Script:";
+
+/* No comment provided by engineer. */
 "Upload" = "Upload";
 
 /* No comment provided by engineer. */
